<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StepCounterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="183dp"
                android:layout_height="451dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reset" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="146dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/newGoal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="set Daily Goal"
                        android:inputType="numberSigned" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="386dp"
                android:layout_height="451dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/steps_text"
                    android:layout_width="233dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="Steps made" />

                <TextView
                    android:id="@+id/counter"
                    android:layout_width="228dp"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="0" />

                <TextView
                    android:id="@+id/daily_goal_text"
                    android:layout_width="228dp"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="Daily Goal" />

                <TextView
                    android:id="@+id/dailygoal"
                    android:layout_width="228dp"
                    android:layout_height="43dp"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Invite Others" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>