...
                    android:id="@+id/cam_trigger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Camera" />

                <Button
                    android:id="@+id/stepcounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="counter" />

                <TextView
                    android:id="@+id/totalsteps_text"
...
